--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,12 @@ body {
     color: var(--text-color);
     background: var(--bg-color);
 }
+
+/*----------------- header -----------------------*/
 header {
     position: fixed;
     background: var(--bg-color);
-    height: 30px;
+    height: 80px;
     width: 100%;
     top: 0;
     right: 0;
@@ -85,10 +87,12 @@ span {
 section {
     padding: 110px 16% 90px;
 }
+
+/*----------------- hero -----------------------*/
 .hero {
     height: 100vh;
     width: 95%;
-    background: url(../img/background.png);
+    background: url(../img/premabg.png);
     background-position: top right;
     background-size: cover;
     display: flex;
@@ -167,6 +171,8 @@ header.sticky {
     box-shadow: 0 .1rem 1rem rgba(0, 0, 0, .2);
     padding: 16px 16%;
 }
+
+/*----------------- about -----------------------*/
 .about {
     background: var(--second-bg-color);
     display: grid;
@@ -214,6 +220,8 @@ header.sticky {
 .center-text h2 {
     font-size: var(--h2-font);
 }
+
+/*----------------- services -----------------------*/
 .services-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, auto));
@@ -269,6 +277,7 @@ header.sticky {
     transform: translateY(-5px) scale(1.03);
 }
 
+/*----------------- portfolio -----------------------*/
 .portfolio {
     background: var(--second-bg-color);
 } 
@@ -304,3 +313,227 @@ header.sticky {
     font-weight: 600;
     color: var(--other-color);
 }
+.row i {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    font-size: 17px;
+    border-radius: 50%;
+    color: var(--text-color);
+    background: #075fe4;
+} 
+.row h4 {
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    line-height: 1.4;
+}
+.row:hover {
+    border: 1px solid var(--main-color);
+    transform: translateY(-5px) scale(1.03);
+    cursor: pointer;  
+}
+
+/*----------------- contact -----------------------*/
+.contact-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4.2rem;
+}
+.contact-form form {
+    position: relative;
+    width: 600px;
+}
+form input,
+form textarea {
+    width: 100%;
+    padding: 20px;
+    border: none;
+    outline: none;
+    box-shadow: 0 0 5px var(--main-color);
+    background: #2d343f;
+    color: var(--text-color);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+form input::placeholder,
+form textarea::placeholder {
+    color: var(--other-color);
+    font-size: 15px;
+}
+form .send-btn {
+    display: inline-block;
+    padding: 11px 26px;
+    background: var(--main-color);
+    color: var(--bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 8px;
+    font-size: 15px;
+    font-weight: 600;
+    transition: all .50s ease;
+    width: 30%;
+}
+form .send-btn:hover {
+    background: transparent;
+    color: var(--main-color);
+    box-shadow: 0 0 20px var(--main-color);
+    cursor: pointer;
+}
+
+/*----------------- footer -----------------------*/
+.footer {
+    padding: 22px;
+    background: var(--second-bg-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+}
+.copyright {
+    font-size: 15px;
+    font-weight: 400;
+    color: var(--other-color);
+}
+.scroll-top i {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: #075fe4;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    color: var(--text-color);
+    font-size: 27px;
+}
+
+
+@media (max-width: 1700px) {
+    header {
+        padding: 20px 8%;
+    }
+    header.sticky {
+        padding: 14px 8%;
+    }
+    section {
+        padding: 90px 8% 80px;
+    }
+    .footer {
+        padding: 18px 8%;
+    }
+    .logo {
+        font-size: 28px;
+    }
+}
+
+@media (max-width: 1380px) {
+    header {
+        padding: 20px 5%;
+    }
+    header.sticky {
+        padding: 14px 5%;
+    }
+    section {
+        padding: 90px 5% 80px;
+    }
+    .footer {
+        padding: 18px 5%;
+    }
+    .hero {
+        height: 90vh;
+        background-position: center;
+    }
+}
+
+@media (max-width: 1290px) {
+    .box {
+        padding: 40px 40px 46px;
+    }
+    .box img {
+        width: 100%;
+        height: 60px;
+        max-width: 60px;
+    }
+    box h3 {
+        font-size: 21px;
+    }
+}
+
+@media (max-width: 1240px) {
+    .about {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        text-align: center;
+    }
+    .about-img img {
+        text-align: center;
+        width: 100%;
+        height: 400px;
+        max-width: 400px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin: 0 auto;
+    }
+    :root {
+        --h1-font: 4rem;
+        --h2-font: 2.2rem;
+        --p-font: 15px;
+    }
+}
+
+@media (max-width: 950px) {
+    :root {
+        --h1-font: 3.5rem;
+    }
+    .social {
+        margin-bottom: 20px;
+    }
+    #menu-icon {
+        display: block;
+    }
+    .navlist {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 255px;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background: var(--bg-color);
+        transition: all .50s ease;
+    }
+    .navlist a {
+        display: block;
+        padding: 17px;
+        font-size: 22px;
+    }
+    .navlist.active {
+        right: 0;
+    }
+}
+
+@media (max-width: 680px) {
+    .main-content p {
+        width: 100%;
+    }
+}
+
+@media (max-width: 470px) {
+    :root {
+        --h1-font: 3rem;
+        --h2-font: 2rem;
+    }
+    .about-img img {
+        text-align: center;
+        width: 100%;
+        height: 300px;
+        max-width: 300px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin: 0 auto;
+    }
+}
+
+
